# LiftLog

./: .gitignore  CMakeLists.txt  LiftLog.pro  LiftLog.qrc  README.md
.github/workflows/: build.yml
LiftLog/: LiftLog.qmltypes  UI.js  main.qml  qml_resources.qrc  qmldir
LiftLog/+android/: UI.js
LiftLog/components/: Calendar.qml  CalendarNavigation.qml  CalendarSwipeable.qml  CellTextInputWithSuffix.qml  CellTypeBase.qml  CellTypeDoubleTextEdit.qml  CellTypeIncrement.qml  CellTypeSlider.qml  CellTypeSwitch.qml  CellTypeTextAndIcon.qml  CellTypeTextEdit.qml  CustomStackViewDelegate.qml  DateAndWeight.qml  DatePicker.qml  DatePickerDialog.qml  DialogTextBox.qml  ExerciseStatsInput.qml  ExerciseWeightDiagram.qml  FinishWorkoutButton.qml  GraphSwipeable.qml  NavigationBar.qml  RectangleButton.qml  SectionedTableView.qml  SectionedTableViewSection.qml  Separator.qml  SetAndRep.qml  Shadow.qml  SliderStyled.qml  SwipeArea.qml  SwitchStyleIOS.qml  SwitchStyled.qml  TabViewStyleIOS.qml  TextInputStyled.qml  TopNotification.qml  Triangle.qml  qmldir  testing_ground.qml
LiftLog/components/dummydata/: calendarModel.qml  exercisesModelAdvanced.qml  setsDelegateModel.qml
LiftLog/dummydata/: appState.qml  dbManager.qml  mainDummy.qml  units.qml
LiftLog/extras/: BaseTumblerStyle.qml  FlatStyle.qml  Tumbler.qml  TumblerColumn.qml  TumblerStyle.qml  qmldir
LiftLog/pages/: BasicPage.qml  BodyWeightPage.qml  BottomPopupView.qml  CalendarPage.qml  DashboardPage.qml  ExerciseWeightPage.qml  GraphPage.qml  IncrementsSettingsPage.qml  ModalPopup.qml  PlatesBarbellSettingsPage.qml  SettingsPage.qml  SideWindow.qml  WelcomePage.qml  WorkoutPage.qml  qmldir
LiftLog/pages/dummydata/: User.qml
LiftLog/utils/: Bean.qml  dummy.js  qmldir
android/: AndroidManifest.xml
android/src/eu/croitor/LiftLog/: NotificationPublisher.java  NotificationService.java
android/src/eu/placinta/LiftLog/: NotificationPublisher.java  NotificationService.java
assets/db/: db_initial_install.sql  liftlog.sqlite3
assets/fonts/: icomoon_LICENSE.txt
ci/: build_with_qmake.cmake  deploy_app.cmake  install_qt.cmake
i18n/: liftlog_en.qm  liftlog_en.ts  liftlog_ru.qm  liftlog_ru.ts
ios/: Info.plist
mac/: Info.plist  icon.icns
src/: android_notification.cpp  android_notification.h  app_state.cpp  app_state.h  application.h  appstate.cpp  appstate.h  barbell.cpp  barbell.h  calendar_model.cpp  calendar_model.h  calendar_slider_model.cpp  calendar_slider_model.h  date_picker_model.cpp  date_picker_model.h  db_manager.cpp  db_manager.h  dbmanager.cpp  dbmanager.h  exercise_weight_diagram_model.cpp  exercise_weight_diagram_model.h  exercise_weight_increment.cpp  exercise_weight_increment.h  generic_tree_node.h  icons.h  ios_app_delegate.mm  ios_local_notification.h  ios_local_notification.mm  local_notification_service.cpp  local_notification_service.h  main.cpp  osx_and_ios_utils.h  osx_app_delegate.mm  osx_notification.h  osx_notification.mm  pieutilsplugin.h  plate.cpp  plate.h  plates_model.cpp  plates_model.h  (+27 more)
src/settings_models/: barbell_model.cpp  barbell_model.h  exercise_sets_and_reps_model.cpp  exercise_sets_and_reps_model.h  main_settings_model.cpp  main_settings_model.h  plates_model.cpp  plates_model.h  settings_interface.h  settings_pages.h  settings_proxy_model.cpp  settings_proxy_model.h  weight_increments_model.cpp  weight_increments_model.h
